--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "2",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,5 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "sass": "^1.59.3"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FaridAlfaro/Veertien.git"
+  },
+  "bugs": {
+    "url": "https://github.com/FaridAlfaro/Veertien/issues"
+  },
+  "homepage": "https://github.com/FaridAlfaro/Veertien#readme",
+  "description": ""
 }
