Avances preloader y contacto

--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "url": "https://github.com/FaridAlfaro/Veertien/issues"
   },
   "homepage": "https://github.com/FaridAlfaro/Veertien#readme",
+  "devDependencies": {},
   "description": ""
 }
