--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "granim": "^2.0.0",
     "remixicon": "^2.5.0",
     "sass": "^1.59.3"
   },
@@ -21,6 +22,5 @@
     "url": "https://github.com/FaridAlfaro/Veertien/issues"
   },
   "homepage": "https://github.com/FaridAlfaro/Veertien#readme",
-  "devDependencies": {},
   "description": ""
 }
