--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "np",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass",
     "sass:watch": "sass --watch scss/main.scss css/main.css"
   },
-  "author": "",
+  "author": "Farid Alfaro",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    
+    "animejs": "^3.2.1",
     "granim": "^2.0.0",
     "remixicon": "^2.5.0",
     "sass": "^1.59.3"
@@ -22,5 +25,6 @@
     "url": "https://github.com/FaridAlfaro/Veertien/issues"
   },
   "homepage": "https://github.com/FaridAlfaro/Veertien#readme",
-  "description": ""
+  "description": "Veentier versin 1",
+  "devDependencies": {}
 }
